fix: resolve sidebar cart overflow and closing issues in sidebar cart section when clicking 'view cart' button

--- a/app/(home)/_components/shopping-cart-sidebar.css
+++ b/app/(home)/_components/shopping-cart-sidebar.css
@@ -1,6 +1,7 @@
 .shopping-cart-sidebar-main-div {
   background-color: rgba(5, 19, 1, 0.1); /* Color #051301 with 40% opacity */
   backdrop-filter: blur(20px); /* Apply a blur effect of 60px */
+  overflow: auto;
 }
 
 .shopping-cart-sidebar-card-item {
